# wasminspect

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml  shell.nix
.github/workflows/: check.yml  release.yml
crates/api/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: debugger.rs  dwarf.rs  lib.rs  process.rs
crates/cli/src/commands/: backtrace.rs  breakpoint.rs  command.rs  debugger.rs  disassemble.rs  expression.rs  frame.rs  global.rs  list.rs  local.rs  memory.rs  mod.rs  process.rs  run.rs  settings.rs  sourcemap.rs  stack.rs  subroutine.rs  symbol.rs  thread.rs
crates/cli/src/dwarf/: format.rs  mod.rs  types.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/vm/: address.rs  executor.rs  export.rs  func.rs  global.rs  host.rs  instance.rs  linker.rs  memory.rs  mod.rs  module.rs  stack.rs  store.rs  table.rs  utils.rs  value.rs
crates/debugger/: Cargo.toml
crates/debugger-server/: Cargo.toml
crates/debugger-server/src/: debugger_proxy.rs  lib.rs  rpc.rs  serialization.rs  socket.rs
crates/debugger/src/: debugger.rs  lib.rs  process.rs
crates/debugger/src/commands/: backtrace.rs  breakpoint.rs  command.rs  debugger.rs  disassemble.rs  expression.rs  frame.rs  global.rs  list.rs  local.rs  memory.rs  mod.rs  process.rs  run.rs  settings.rs  sourcemap.rs  stack.rs  subroutine.rs  symbol.rs  thread.rs
crates/debugger/src/dwarf/: format.rs  mod.rs  types.rs  utils.rs
crates/swift-runtime/: Cargo.toml  build.rs
crates/swift-runtime/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/macro/: Cargo.toml
crates/vm/macro/src/: inst.rs  lib.rs
crates/vm/src/: address.rs  config.rs  data.rs  elem.rs  executor.rs  export.rs  func.rs  global.rs  host.rs  inst.rs  instance.rs  interceptor.rs  lib.rs  linker.rs  memory.rs  module.rs  stack.rs  store.rs  table.rs  value.rs
crates/wasi/: Cargo.toml
crates/wasi/macro/: Cargo.toml
crates/wasi/macro/src/: lib.rs  utils.rs  wasi.rs
crates/wasi/src/: borrow.rs  def.rs  lib.rs
crates/wasminspect-cli/: Cargo.toml
crates/wasminspect-cli/src/: debugger.rs  lib.rs  process.rs
crates/wasminspect-cli/src/commands/: command.rs  debugger.rs  mod.rs  run.rs
crates/wasminspect-core/: Cargo.toml
crates/wasminspect-core/src/vm/: address.rs  executor.rs  export.rs  global.rs  host.rs  instance.rs  memory.rs  mod.rs  module.rs  stack.rs  store.rs  table.rs  value.rs
crates/wast-spec/: Cargo.toml
crates/wast-spec/src/: lib.rs  spectest.rs
docs/: tutorial.md
example/: Makefile  calc.wat  fizzbazz.rs  fizzbuzz.rs  hello.c
src/: main.rs
src/interpreter/: environment.rs  executor.rs  mod.rs  module.rs
tests/: debugger.rs  lib.rs  simple_example.rs  spectest.rs
tests/example/: Makefile  calc.wat  hello.c
tests/simple-example/: Makefile  calc.wat  foo.wat
tests/simple-example/c-dwarf/: .gitignore  Makefile  dummy.c  main.c
tests/simple-example/swift/: wasminspect_init_swift
tests/wast-spec/: Cargo.toml
wasminspect-cli/: Cargo.toml
wasminspect-cli/src/: main.rs
wasminspect-core/src/: lib.rs
wasminspect-core/src/interpreter/: address.rs  environment.rs  executor.rs  export.rs  external.rs  func.rs  global.rs  host.rs  integer.rs  memory.rs  mod.rs  module.rs  stack.rs  store.rs  table.rs  utils.rs  validator.rs  value.rs
wasminspect-core/src/vm/: func.rs  host.rs  validator.rs
wast-spec/src/: lib.rs  spectest.rs
