[package]
name = "wasminspect"
version = "0.1.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"
description = "An Interactive Debugger for WebAssembly"
license-file = "LICENSE"
repository = "https://github.com/kateinoigakukun/wasminspect"
documentation = "https://github.com/kateinoigakukun/wasminspect/blob/master/docs/tutorial.md"

[[bin]]
name = "wasminspect"
path = "src/main.rs"

[dependencies]
wasminspect-cli = { path = "crates/cli" }
wasminspect-vm = { path = "crates/vm" }
wast-spec = { path = "crates/wast-spec" }
clap = "2.33.0"
wasmi-validation = "0.3.0"
structopt = "0.3"
pretty_env_logger = "0.4.0"

[workspace]
members = [
  "crates/cli",
  "crates/vm",
  "crates/wast-spec",
  "crates/wasi",
]
