[package]
name = "wasminspect"
version = "0.2.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"
description = "An Interactive Debugger for WebAssembly"
license-file = "LICENSE"
repository = "https://github.com/kateinoigakukun/wasminspect"
documentation = "https://github.com/kateinoigakukun/wasminspect/blob/master/docs/tutorial.md"

[[bin]]
name = "wasminspect"
path = "src/bin/wasminspect.rs"

[dependencies]
wasminspect-debugger = { path = "crates/debugger" }
wasminspect-vm = { path = "crates/vm" }
wast-spec = { path = "crates/wast-spec" }
clap = "2.33.0"
structopt = "0.3"
env_logger = "0.7.1"

[workspace]
members = [
  "crates/debugger",
  "crates/vm",
  "crates/wast-spec",
  "crates/wasi",
  "crates/swift-runtime",
]
[features]
default = []
swift-extension = ["wasminspect-debugger/swift-extension"]
