[package]
name = "wasminspect-cli"
version = "0.1.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"

[dependencies]
wasminspect-vm = { path = "../vm" }
wasminspect-wasi = { path = "../wasi" }
linefeed = "0.6.0"
clap = "2.33.0"
structopt = "0.3"
thiserror = "1.0.9"
anyhow = "1.0.26"
wasmparser = "0.51.4"
gimli = "0.20.0"
log = "0.4.8"
