[package]
name = "wasminspect-debugger-server"
version = "0.2.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"

[dependencies]
wasminspect-debugger = { path = "../debugger" }
anyhow = "1.0.26"
hyper = { version = "0.14.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0"
bytes = "1"
serde_json = "1.0"
log = "0.4.8"
tokio = { version = "1", features = ["full"] }
