[package]
name = "wasminspect-debugger-server"
version = "0.2.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"

[dependencies]
wasminspect-debugger = { path = "../debugger" }
wasminspect-vm = { path = "../vm" }
wasmparser = "0.94.0"
anyhow = "1.0.26"
hyper = { version = "0.14.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0"
bytes = "1"
serde_json = "1.0"
log = "0.4.8"
headers = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.13", default-features = false }
tower-service = "0.3"
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"

[dev-dependencies]
env_logger = "0.7.1"
